# Plane_game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Plane.cpp  Plane.h  main.cpp
Plane_game/: CMakeLists.txt  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Plane.cpp  Plane.h  main.cpp
